--- a/q/108831.html
+++ b/q/108831.html
@@ -26,22 +26,47 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>088</td><td>Perl 5 MListUtil=uniq F</td><td>240918T164826Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/275616#275616">Xcali</a></td></tr>
-<tr d-ix="1"><td>246</td><td>C#</td><td>170201T211936Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108890#108890">CSharpie</a></td></tr>
-<tr d-ix="2"><td>141</td><td>PHP</td><td>170523T095510Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/122186#122186">J&#246;r</a></td></tr>
-<tr d-ix="3"><td>027</td><td>Jelly</td><td>170523T031047Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/122127#122127">fireflam</a></td></tr>
-<tr d-ix="4"><td>116</td><td>Python 2</td><td>170201T131224Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108859#108859">Rod</a></td></tr>
-<tr d-ix="5"><td>117</td><td>Mathematica</td><td>170201T182038Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108877#108877">Greg Mar</a></td></tr>
-<tr d-ix="6"><td>021</td><td>05AB1E</td><td>170201T143939Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108863#108863">Emigna</a></td></tr>
-<tr d-ix="7"><td>104</td><td>PowerShell</td><td>170131T234848Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108833#108833">briantis</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Vyxal</td><td>240919T143623Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/275642#275642">lyxal</a></td></tr>
+<tr d-ix="1"><td>088</td><td>Perl 5 MListUtil=uniq F</td><td>240918T164826Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/275616#275616">Xcali</a></td></tr>
+<tr d-ix="2"><td>246</td><td>C#</td><td>170201T211936Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108890#108890">CSharpie</a></td></tr>
+<tr d-ix="3"><td>141</td><td>PHP</td><td>170523T095510Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/122186#122186">J&#246;r</a></td></tr>
+<tr d-ix="4"><td>027</td><td>Jelly</td><td>170523T031047Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/122127#122127">fireflam</a></td></tr>
+<tr d-ix="5"><td>116</td><td>Python 2</td><td>170201T131224Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108859#108859">Rod</a></td></tr>
+<tr d-ix="6"><td>117</td><td>Mathematica</td><td>170201T182038Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108877#108877">Greg Mar</a></td></tr>
+<tr d-ix="7"><td>021</td><td>05AB1E</td><td>170201T143939Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108863#108863">Emigna</a></td></tr>
+<tr d-ix="8"><td>104</td><td>PowerShell</td><td>170131T234848Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108833#108833">briantis</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-MList::Util=uniq -F</code>, 88 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 139 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 17.375 bytes</h1>
+<pre><code>4(Ċƛ÷9ḋ\91&quot;*∑MRṅ∑;∑…
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiNCjEisabw7c54biLXFw5MVwiKuKIkU1S4bmF4oiRO+KIkeKApiIsIiIsIlwiMTExMTExMTExMTExMTExMTExMTExMTExMTExMTExMVwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>0100101010101001110011011100001001011100011110001100011100101111100011011010111010000101111111000110011100010011000000111001010111100100001
+</code></pre>
+<h2>Explained</h2>
+<pre><code>4(Ċƛ÷9ḋ\91&quot;*∑MRṅ∑;∑…­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁣⁤⁪‏‏​⁡⁠⁡‌⁢⁤​‎⁪⁪⁠‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏‏​⁡⁠⁡‌⁣⁡​‎‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏‏​⁡⁠⁡‌⁣⁢​‎‎⁪⁡⁪⁠⁪⁢⁡⁣⁪‏‏​⁡⁠⁡‌⁣⁣​‎‎⁪⁡⁪⁠⁪⁢⁡⁤⁪‏‏​⁡⁠⁡‌­
+4(                    # ‎⁡4 times:
+  Ċ                   # ‎⁢  [[x, top.count(x)] for x in top]
+   ƛ             ;    # ‎⁣  To each count pair:
+    ÷                 # ‎⁤    Dump
+     9ḋ               # ‎⁢⁡    Divmod by 9
+       \91&quot;           # ‎⁢⁢   [&quot;9&quot;, 1]
+           *          # ‎⁢⁣    Repeat the 9 (count // 9) times, leave the count % 9 as is
+             MR       # ‎⁢⁤    Append x to each character in ^
+               ṅ∑     # ‎⁣⁡    Join into a single string
+                  ∑   # ‎⁣⁢  Join all that into a single string
+                   …  # ‎⁣⁣  and print without popping
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-MList::Util=uniq -F</code>, 88 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>my$a;for$t(uniq@F){$n=0;1while s/$t//&amp;&amp;++$n&lt;9;$a.=$n.$t;/$t/&amp;&amp;redo}say$_=$a;++$c&lt;4&amp;&amp;redo
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/z@3UiXROi2/SKVEozQvs9DBTbNaJc/WwNqwPCMzJ1WhWF@lRF9fTU1bWyXPxtJaJVHPViVPT6XEGiSuplaUmpJfW5xYqRJvCzQGqCjZxgQi@v@/IRL4l19QkpmfV/xf19dUz8DQAEj7ZBaXWFmFlmTm2IIs/q/rBgA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>C# 246 bytes</h1>
+<div id="pu2" class="pu"><h1>C# 246 bytes</h1>
 
 <pre><code>namespace System{using Linq;using f=String;class p{static void Main(f[] s){f p=s[0];for(int i=0,n;i++&lt;4;Console.Write(p+" "))p=f.Concat(p.GroupBy(c=&gt;c).SelectMany(g=&gt;new int[(n=g.Count())/9].Select(_ =&gt;"9"+g.Key).Concat(new[]{n%9+""+g.Key})));}}}
 </code></pre>
@@ -70,14 +95,14 @@
 
 <p><a href="https://dotnetfiddle.net/1rxarw" rel="nofollow noreferrer">Try it here</a> (Type input into bottom frame once its compiled and hit ENTER)</p>
 </div>
-<div id="pu2" class="pu"><h1>PHP, 141 Bytes</h1>
+<div id="pu3" class="pu"><h1>PHP, 141 Bytes</h1>
 
 <pre class="lang-php prettyprint-override"><code>for($a=$argn;$i++&lt;4;$a=$o,print$a._,$o="")foreach(array_count_values(str_split($a))as$n=&gt;$c)$o.=str_repeat("9$n",$c/9^0).($c%9?($c%9).$n:"");
 </code></pre>
 
 <p><a href="https://tio.run/nexus/php#HY1BCsMgFET3PYb8ghKxXbSUxNjcpPIR2wSCytcUenprshmYecPMOKU5nQDpEwx73Jmu70gc0ByRhqXrxpvefZSJllAAlZUQDWOiNT26mSMR/qyLWyj2i@vmM8@FbE7rUtqUEJghmCc4AVGZHZFPHgtnPQQmwV3611UoDu7cT4cKBWFoD7rWPw" rel="nofollow noreferrer" title="PHP – TIO Nexus">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 27 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 27 bytes</h1>
 
 <pre><code>L,Ḣ
 D©®i$ÞŒgs9$€Ç€€FḌµ4µÐ¡Ḋ
@@ -111,7 +136,7 @@ D                       -   convert integer to list of digits
                            initial element
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 116 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 116 bytes</h1>
 
 
 
@@ -121,14 +146,14 @@ exec"x=''.join(x.count(n)/9*(`9`+n)+`x.count(n)%9`+n for i,n in enumerate(x)if n
 
 <p><a href="https://tio.run/nexus/python2#TchBCoMwEAXQfU8xCJIZLZZCNyqeRAopEmEK/ZGQwNw@xVX7lq/aojhKZrkEC1tji3PDOyrYhi0WZIbcxo796HtI73/bnkN7TKRXkIICyiekVw5sojuBEPP5tk76lPlIikw2N92jVnf/474" rel="nofollow noreferrer" title="Python 2 – TIO Nexus">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1>Mathematica, 117 bytes</h1>
+<div id="pu6" class="pu"><h1>Mathematica, 117 bytes</h1>
 
 <pre><code>Grid@{Rest@NestList[FromDigits[Join@@(Reverse/@Tally@IntegerDigits@#//.{a_,b_}/;a&gt;9-&gt;{9,b}~Sequence~{a-9,b})]&amp;,#,4]}&amp;
 </code></pre>
 
 <p>Seems like it shouldn't need to be this long.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, <s>30</s> <s>23</s> 21 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, <s>30</s> <s>23</s> 21 bytes</h1>
 
 <pre><code>4F©Ùv9y«®y¢9‰`U×XyJ}=
 </code></pre>
@@ -152,7 +177,7 @@ exec"x=''.join(x.count(n)/9*(`9`+n)+`x.count(n)%9`+n for i,n in enumerate(x)if n
                     =  # print the current number without popping
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>111</s> 104 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>111</s> 104 bytes</h1>
 
 
 
