--- a/q/108831.html
+++ b/q/108831.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>Japt v2.0a0 Q</td><td>240919T152932Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/275644#275644">Shaggy</a></td></tr>
+<tr d-ix="0"><td>019</td><td>Japt</td><td>240919T152932Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/275644#275644">Shaggy</a></td></tr>
 <tr d-ix="1"><td>nan</td><td>Vyxal</td><td>240919T143623Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/275642#275642">lyxal</a></td></tr>
 <tr d-ix="2"><td>088</td><td>Perl 5 MListUtil=uniq F</td><td>240918T164826Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/275616#275616">Xcali</a></td></tr>
 <tr d-ix="3"><td>246</td><td>C#</td><td>170201T211936Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108890#108890">CSharpie</a></td></tr>
@@ -37,10 +37,26 @@
 <tr d-ix="8"><td>021</td><td>05AB1E</td><td>170201T143939Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108863#108863">Emigna</a></td></tr>
 <tr d-ix="9"><td>104</td><td>PowerShell</td><td>170131T234848Z</td><td><a href="https://codegolf.stackexchange.com/questions/108831/one-1-two-1s-one-2-one-1/108833#108833">briantis</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0 <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-Q</code></a>, 22 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>4Æ=ñ@bXÃò¦ cò9 ËÊ+DÎÃ¬
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>22</s> 19 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>4Æ=ü@bXÃcò9 ËÊ+DÎÃ¬
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LVE&amp;code=NMY98UBiWMPypiBj8jkgy8orRM7DrA&amp;input=IjExMTExMTExMTExMSI" rel="nofollow noreferrer">Try it</a></p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=NMY9/EBiWMNj8jkgy8orRM7DrA&amp;input=IjExMTExMTExMTExMSI" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>4Æ=ü@bXÃcò9 ËÊ+DÎÃ¬     :Implicit input of string U
+4Æ                      :Map the range [0,4)
+  =                     :  Reassign to U
+   ü                    :    Group &amp; sort by
+    @                   :    Passing each X through the following function
+     bX                 :      First index of X in U
+       Ã                :    End grouping
+        c               :    Flat map
+         ò9             :      Partitions of length 9
+            Ë           :    Map each D
+             Ê          :      Length
+              +         :      Append
+               DÎ       :        First character of D
+                 Ã      :    End map
+                  ¬     :    Join to a string
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 139 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 17.375 bytes</h1>
 <pre><code>4(Ċƛ÷9ḋ\91&quot;*∑MRṅ∑;∑…
