--- a/q/275590.html
+++ b/q/275590.html
@@ -26,14 +26,111 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
-<tr d-ix="1"><td>304</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
-<tr d-ix="2"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
-<tr d-ix="3"><td>303</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
-<tr d-ix="4"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
+<tr d-ix="0"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
+<tr d-ix="2"><td>304</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="3"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
+<tr d-ix="4"><td>303</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 <tr d-ix="5"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 136 DECLEs<sup>1</sup>=170 bytes</h1>
+<div id="pu0" class="pu"><h1>ZX Spectrum 48K Basic, <s>246</s> 203 bytes</h1>
+<pre><code>  10 LET t=VAL &quot;.14&quot;: LET a$=&quot;&lt;0
+247&lt;?0237&lt;&lt;0247&lt;?0237&lt;C0247&lt;A024
+7&lt;@047;&lt;&gt;047;&lt;&quot;: FOR i=SGN PI TO
+ LEN a$ STEP VAL &quot;6&quot;: FOR j=NOT
+PI TO INT PI: FOR k=SGN PI TO VA
+L &quot;4&quot;: BEEP t,VAL &quot;12&quot;*j+CODE a$
+(i+k)-CODE a$(i): NEXT k: NEXT j
+: FOR j=INT PI TO NOT PI STEP -S
+GN PI: FOR k=VAL &quot;5&quot; TO VAL &quot;2&quot;
+STEP -SGN PI: BEEP t,VAL &quot;12&quot;*j+
+CODE a$(i+k)-CODE a$(i): NEXT k:
+ NEXT j: NEXT i
+</code></pre>
+<p>The above is how the program lists on screen as the ZX Spectrum's screen is 32 characters wide. The byte count was calculated by subtracting the system variables for the end and start of the program; this will be one less than the save file length as an empty program has a save file length of 1. Unfortunately I was using an online emulator which only has a save snapshot option, so you'll have to retype this yourself to test it. Note that if you try to enter this program literally in 128K mode it will try to tokenise the <code>&lt;&gt;</code> inside the string, breaking the program, so either replace it with <code>&lt;&quot;+&quot;&gt;</code>, do some magic with POKE, or use 48K mode and type <code>&lt;&gt;</code> as two characters rather than the token. In both modes you may also need to use the keyboard layout to enter some special characters such as <code>-</code> or <code>*</code>. Explanation:</p>
+<pre><code>  10
+</code></pre>
+<p>Arbitrary line number (always costs 2 bytes).</p>
+<pre><code>LET t=VAL &quot;.14&quot;
+</code></pre>
+<p>Timing variable, adjusted to make the overall run time about 48s of real time. (Processing overhead makes the program take about 50% longer than the actual notes).</p>
+<pre><code>LET a$=&quot;&lt;0247&lt;?0237&lt;&lt;0247&lt;?0237&lt;C0247&lt;A0247&lt;@047;&lt;&gt;047;&lt;&quot;
+</code></pre>
+<p>String of tonic and arpeggio data.</p>
+<pre><code>FOR i=SGN PI TO LEN a$ STEP VAL &quot;6&quot;
+</code></pre>
+<p>This steps through each tonic in the data string, thus repeating <code>8</code> times. <code>SGN PI</code> is used as it's even shorter than <code>VAL &quot;1&quot;</code>, which saves a few bytes because numeric literals take up six bytes for their internal representation.</p>
+<pre><code>FOR j=NOT PI TO INT PI
+</code></pre>
+<p>Repeat for four octaves; <code>NOT PI</code> is <code>0</code> and <code>INT PI</code> is of course <code>3</code>.</p>
+<pre><code>FOR k=SGN PI TO VAL &quot;4&quot;
+</code></pre>
+<p>Repeat for four notes.</p>
+<pre><code>BEEP t,VAL &quot;12&quot;*j+CODE a$(i+k)-CODE a$(i)
+</code></pre>
+<p>Compute the note index (<code>C₄=0</code>) and play it.</p>
+<pre><code>NEXT k: NEXT j
+</code></pre>
+<p>Repeat for the rest of the ascending arpeggio.</p>
+<pre><code>FOR j=INT PI TO NOT PI STEP -SGN PI
+</code></pre>
+<p>Loop back down through the octaves.</p>
+<pre><code>FOR k=VAL &quot;5&quot; TO VAL &quot;2&quot; STEP -SGN PI
+</code></pre>
+<p>Loop down through the notes.</p>
+<pre><code>BEEP t,VAL &quot;12&quot;*j+CODE a$(i+k)-CODE a$(i)
+</code></pre>
+<p>Compute and play the note.</p>
+<pre><code>NEXT k: NEXT j: NEXT i
+</code></pre>
+<p>Repeat for the remainder of the prelude.</p>
+<p>Edit: Saved 43 bytes thanks to @Arnauld's suggesting of indexing into a single data string.</p>
+<h1>ZX Spectrum 128K Basic, 195 bytes</h1>
+<pre><code>  10 LET a$=&quot;CDEG  #BGED abCE  A
+     ECb  fgaC  FCag  gabD  GDBa
+       $aC$E$G$AG$EC$bDFA $BAFd &quot;
+     : FOR i= NOT PI TO VAL &quot;84&quot;
+      STEP VAL &quot;12&quot;: FOR j = INT
+     PI TO VAL &quot;6&quot; STEP INT PI :
+      FOR k=j TO VAL &quot;9&quot;-j STEP
+     SGN ( VAL &quot;9&quot;-j-j): PLAY &quot;O
+     &quot;+ STR$ k+&quot; 2&quot;+(a$( TO VAL
+     &quot;24&quot;)+a$)(i+j+j- VAL &quot;5&quot; TO
+      i+j+j): NEXT k: NEXT j: NE
+     XT i
+</code></pre>
+<p>The above is how the program displays during edit mode as the ZX Spectrum's screen is 32 characters wide and it wraps lines to column 5. The byte count was calculated by subtracting the system variables for the end and start of the program as the code is automatically tokenised (in edit mode tokens are always preceded with spaces but if you list the program then some of those will disappear) although when typing in the program you won't need to enter spaces except inside the string literal or between consecutive tokens. Explanation:</p>
+<pre><code>  10
+</code></pre>
+<p>Arbitrary line number (always costs 2 bytes).</p>
+<pre><code>LET a$=&quot;CDEG  #BGED abCE  AECb  fgaC  FCag  gabD  GDBa  $aC$E$G$AG$EC$bDFA $BAFd &quot;
+</code></pre>
+<p>Arpeggio data. Lower case letters play an octave below, so each octave command actually selects two octaves from which notes can be played, but to be able to play all of the arpeggios using the given four octaves I have had to cheat and play the C₇ as a B𝄰₆. Note that the first two arpeggios are only shown once here and doubled up below.</p>
+<pre><code>FOR i= NOT PI TO VAL &quot;84&quot; STEP VAL &quot;12&quot;
+</code></pre>
+<p>Loop eight times, stepping though the arpeggio data string.</p>
+<pre><code>FOR j = INT PI TO VAL &quot;6&quot; STEP INT PI
+</code></pre>
+<p>Switch between starting at octave <code>3</code> and octave <code>6</code>.</p>
+<pre><code>FOR k=j TO VAL &quot;9&quot;-j STEP SGN ( VAL &quot;9&quot;-j-j)
+</code></pre>
+<p>Loop through the four octaves.</p>
+<pre><code>PLAY &quot;O&quot;+ STR$ k+&quot; 2&quot;+(a$( TO VAL &quot;24&quot;)+a$)(i+j+j- VAL &quot;5&quot; TO i+j+j)
+</code></pre>
+<p>Select the octave and the note duration (the default tempo is 120 bpm but a note length code of <code>2</code> gives us the desired duration at this tempo) and play the current arpeggio at this octave.</p>
+<pre><code>NEXT k: NEXT j: NEXT i
+</code></pre>
+<p>Repeat for the remainder of the prelude.</p>
+<p>The figure of 195 bytes compares well to the 272 byte string needed to play the prelude in a single PLAY command: (line wrapping not part of the string)</p>
+<pre><code>T80O3(1CDEGO5cdegCDEGO7cdegCgedcO5GEDCgedcO3GED
+abCEABO5ceabCEABO7ceaeaO5BAECbaecO3BAECb)
+fgaCFGAO5cfgaCFGAO7cfcO5AGFCagfcO3AGFCag
+gabDGABO5dgabDGABO7dgdO5BAGDbagdO3BAGDba
+$aC$EG$AO5c$eg$aC$EG$AO7c$eg$ag$ecO5$AG$EC$ag$ecO3$AG$EC
+$bDFA$BO5dfa$bDFA$BO7dfa$bafdO5$BAFD$bafdO3$BAFD
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 136 DECLEs<sup>1</sup>=170 bytes</h1>
 <p><em><sup>1. CP-1610 instructions are encoded with 10-bit values (0x000 to 0x3FF), known as DECLEs. Although the Intellivision is also able to work on 16-bit data, programs were really stored in 10-bit ROM back then.</sup></em></p>
 <p>A fantasy console?!? Let's do it on a real one!</p>
 <p>This code is meant to be run on a PAL Intellivision (50Hz). It would also work on an NTSC system (60Hz), but at a different pitch and speed.</p>
@@ -194,7 +291,7 @@
 </ul>
 <p>The actual delta values are obtained by subtracting 5 to the stored values.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> <s>379</s> <s>340</s> 304 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> <s>379</s> <s>340</s> 304 bytes</h1>
 <pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261
 $A=110,123,130,174,220
 $G=103,130,155,196,207
@@ -218,7 +315,7 @@ P $G 2
 </ul>
 <p><em>P.S. I keep getting this weird issue where some notes are missed; I modified the code to write out the current note and index that it's on and it is indeed running correctly, but the beeps are being clobbered by something else.</em></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>78</s> 77 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>78</s> 77 bytes</h1>
 <pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKeK1X&quot;tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
 </code></pre>
 <p>This uses equal temperament, with a C<sub>3</sub> frequency of 131.6 Hz (more accurate values could be achieved at the cost of 2 or 3 bytes, namely replacing <code>76</code> in the code by <code>76.4</code> or <code>76.45</code>).</p>
@@ -239,7 +336,7 @@ P $G 2
 <p>A <em>for each</em> loop (<code>&quot;</code>...<code>]</code>) reads each note, represented by the corresponding number <em>S</em>. To generate the waveform for each note, a time vector [1 2 ... 1875] is first generated (<code>1875:</code>). The length of this vector, when replayed at 10000 samples per second, determines a tempo of 80 bpm, as required. This vector is element-wise multiplied by 2*pi <code>(YPE*)</code>, divided by 76 (<code>76/</code>), and then multiplied by 2 raised to the number that results from dividing <em>S</em> by 12 (<code>@12/W*</code>). Applying the sine function (<code>Y,</code>) produces a 1×1875 vector with samples of a sinusoid of the frequency correponding to <em>S</em>. The values of this vector are multiplied by 2 (<code>E</code>). The last sinusoid contains NaN values and will produce no sound.</p>
 <p>The 257 resulting waveforms, each with 1875 samples, are concatened horizontally (<code>&amp;h</code>) into a single waveform. This waveform is then replayed, without scaling, at the indicated sample rate (<code>1e4Y#</code>). When replaying, sample values are clipped to the interval [1, −1].</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> 303 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> 303 bytes</h1>
 <pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
 for k=0to 7:dim a(4):for i=1to 4:read a(i):next
 dim m(16):for i=0to 3:for j=1to 4:n=a(j)+12*i:m(j+4*i)=440*2^((n-21)/12):next:next
@@ -248,68 +345,6 @@ sub s(n):sound n,.18,50:return
 </code></pre>
 <p>The info about chords and octaves in the &quot;music theory&quot; section helped a lot.</p>
 <p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s> <em>: I am sure there is a better way of coding this ...</em></sub></p>
-</div>
-<div id="pu4" class="pu"><h1>ZX Spectrum 48K Basic, <s>246</s> 203 bytes</h1>
-<pre><code>  10 LET t=VAL &quot;.14&quot;: LET a$=&quot;&lt;0
-247&lt;?0237&lt;&lt;0247&lt;?0237&lt;C0247&lt;A024
-7&lt;@047;&lt;&gt;047;&lt;&quot;: FOR i=SGN PI TO
- LEN a$ STEP VAL &quot;6&quot;: FOR j=NOT
-PI TO INT PI: FOR k=SGN PI TO VA
-L &quot;4&quot;: BEEP t,VAL &quot;12&quot;*j+CODE a$
-(i+k)-CODE a$(i): NEXT k: NEXT j
-: FOR j=INT PI TO NOT PI STEP -S
-GN PI: FOR k=VAL &quot;5&quot; TO VAL &quot;2&quot;
-STEP -SGN PI: BEEP t,VAL &quot;12&quot;*j+
-CODE a$(i+k)-CODE a$(i): NEXT k:
- NEXT j: NEXT i
-</code></pre>
-<p>The above is how the program lists on screen as the ZX Spectrum's screen is 32 characters wide. The byte count was calculated by subtracting the system variables for the end and start of the program; this will be one less than the save file length as an empty program has a save file length of 1. Unfortunately I was using an online emulator which only has a save snapshot option, so you'll have to retype this yourself to test it. Note that if you try to enter this program literally in 128K mode it will try to tokenise the <code>&lt;&gt;</code> inside the string, breaking the program, so either replace it with <code>&lt;&quot;+&quot;&gt;</code>, do some magic with POKE, or use 48K mode and type <code>&lt;&gt;</code> as two characters rather than the token. In both modes you may also need to use the keyboard layout to enter some special characters such as <code>-</code> or <code>*</code>. Explanation:</p>
-<pre><code>  10
-</code></pre>
-<p>Arbitrary line number (always costs 2 bytes).</p>
-<pre><code>LET t=VAL &quot;.14&quot;
-</code></pre>
-<p>Timing variable, adjusted to make the overall run time about 48s of real time. (Processing overhead makes the program take about 50% longer than the actual notes).</p>
-<pre><code>LET a$=&quot;&lt;0247&lt;?0237&lt;&lt;0247&lt;?0237&lt;C0247&lt;A0247&lt;@047;&lt;&gt;047;&lt;&quot;
-</code></pre>
-<p>String of tonic and arpeggio data.</p>
-<pre><code>FOR i=SGN PI TO LEN a$ STEP VAL &quot;6&quot;
-</code></pre>
-<p>This steps through each tonic in the data string, thus repeating <code>8</code> times. <code>SGN PI</code> is used as it's even shorter than <code>VAL &quot;1&quot;</code>, which saves a few bytes because numeric literals take up six bytes for their internal representation.</p>
-<pre><code>FOR j=NOT PI TO INT PI
-</code></pre>
-<p>Repeat for four octaves; <code>NOT PI</code> is <code>0</code> and <code>INT PI</code> is of course <code>3</code>.</p>
-<pre><code>FOR k=SGN PI TO VAL &quot;4&quot;
-</code></pre>
-<p>Repeat for four notes.</p>
-<pre><code>BEEP t,VAL &quot;12&quot;*j+CODE a$(i+k)-CODE a$(i)
-</code></pre>
-<p>Compute the note index (<code>C₄=0</code>) and play it.</p>
-<pre><code>NEXT k: NEXT j
-</code></pre>
-<p>Repeat for the rest of the ascending arpeggio.</p>
-<pre><code>FOR j=INT PI TO NOT PI STEP -SGN PI
-</code></pre>
-<p>Loop back down through the octaves.</p>
-<pre><code>FOR k=VAL &quot;5&quot; TO VAL &quot;2&quot; STEP -SGN PI
-</code></pre>
-<p>Loop down through the notes.</p>
-<pre><code>BEEP t,VAL &quot;12&quot;*j+CODE a$(i+k)-CODE a$(i)
-</code></pre>
-<p>Compute and play the note.</p>
-<pre><code>NEXT k: NEXT j: NEXT i
-</code></pre>
-<p>Repeat for the remainder of the prelude.</p>
-<p>Out of interest, I thought I'd checkout the ZX Spectrum 128's PLAY command. The literal string that plays the prelude is 272 bytes long, even with the repeat option to duplicate the first quarter, so the complete program would be a little longer still, probably 280 bytes, unless there's some golfy way to build up the string as it is somewhat repetitive in places: (line wrapping not part of the string)</p>
-<pre><code>T80O3(1CDEGO5cdegCDEGO7cdegCgedcO5GEDCgedcO3GED
-abCEABO5ceabCEABO7ceaeaO5BAECbaecO3BAECb)
-fgaCFGAO5cfgaCFGAO7cfcO5AGFCagfcO3AGFCag
-gabDGABO5dgabDGABO7dgdO5BAGDbagdO3BAGDba
-$aC$EG$AO5c$eg$aC$EG$AO7c$eg$ag$ecO5$AG$EC$ag$ecO3$AG$EC
-$bDFA$BO5dfa$bDFA$BO7dfa$bafdO5$BAFD$bafdO3$BAFD
-</code></pre>
-<p>(Notes <code>C-GAB</code> are an octave above <code>c-gab</code>, so <code>O5CDEG</code> just means <code>O6cdeg</code>.)</p>
-<p>Edit: Saved 43 bytes thanks to @Arnauld's suggesting of indexing into a single data string.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/bear24rw/alsa-utils" rel="nofollow noreferrer">alsa-utils</a>, 190 bytes</h1>
 <p>xxd dump:</p>
